# libretto

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: Cargo.toml
app/src/: pyproject.rs
libretto/: Cargo.toml
libretto/src/: main.rs
rust-venv/: Cargo.toml  README.md
rust-venv/src/: dir.rs  errors.rs  lib.rs  venv.rs
