[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "libretto"
dynamic = ["version"]
description = "A Simple task runner for pyproject.toml, written in Rust."
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/AmaseCocoa/libretto"
Issues = "https://github.com/AmaseCocoa/libretto/issues"

[tool.maturin]
bindings = "bin"
strip = true

[tool.libretto]
venv = ".venv"

[tool.libretto.tasks]
install = "maturin develop -m libretto/Cargo.toml"
build = "maturin build -m libretto/Cargo.toml"
publish = "maturin publish -m libretto/Cargo.toml"